elementos feitos para celular

--- a/Ex01/index.html
+++ b/Ex01/index.html
@@ -14,12 +14,10 @@
         <div class="login">
             <h1 class="title_login">LOGIN</h1>
             <p class="email_p">E-MAIL</p>
-            <div class="email_login"></div>
+            <input type="email" class="email_login" placeholder="Digite seu e-mail">
             <p class="senha_p">SENHA</p>
-            <div class="senha_login"></div>
-            <div class="submit_login">
-                <p class="submit_p">ENTRAR</p>
-            </div>
+            <input type="password" class="senha_login" placeholder="Digite sua senha">
+            <button type="submit" class="submit_login">ENTRAR</button>
             <p class="rodape_login">ESQUECI A SENHA</p>
         </div>
     </div>
