--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <h1>Exercícios <em>Progamação</em> Web</h1>
     <div class="container">
         <div class="imagem">
-            <img src="midias/html-css-javascript.jpg" alt="logo das linguagens">
+            <img src="html-css-javascript.jpg" alt="logo das linguagens">
         </div>
         <div class="listas">
             <ul>
-                <li>Media Query</li>
+                <a href="Ex01/index.html">
+                    <li>Media Query</li>
+                </a>
             </ul>
         </div>
     </div>
