--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="listas">
             <ul>
-                <a href="Ex01/index.html">
+                <a href="Ex01/index.html" target="_blank">
                     <li>Media Query</li>
                 </a>
             </ul>
