--- a/Ex02/index.html
+++ b/Ex02/index.html
@@ -9,14 +9,12 @@
 </head>
 <body>
     <h1>Exercício 02 - Somatório</h1>
-    <div class="input_numero">
-        <p>Número:</p>
-        <input id="inputNum" type="text" placeholder="Digite um Número">
-        <input id="btAdici" type="button" value="Adicionar">
-    </div>
-    <div class="input_resultado">
-        <p>Somatório:</p>
-        <input id="inputSoma" type="text" readonly>
-    </div>
+    <p>Número:
+        <input id="inputNum" type="number" placeholder="Digite um Número">
+        <button id="btAdic">Adicionar</button>
+    </p>
+    <p>Somatório:
+        <input id="inputSoma"readonly value="0">
+    </p>   
 </body>
 </html>
