--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 <a href="Ex01/index.html" target="_blank">
                     <li>Media Query</li>
                 </a>
+
+                <a href="Ex02/" target="_blank">
+                    <li>Somatório</li>
+                </a>
+
+                <a href="Ex03/" target="_blank">
+                    <li>Sorteador</li>
+                </a>
             </ul>
         </div>
     </div>
