--- a/Ex02/index.html
+++ b/Ex02/index.html
@@ -16,5 +16,12 @@
     <p>Somatório:
         <input id="inputSoma"readonly value="0">
     </p>   
+    <p>Média:
+        <input id="inputMedia" readonly>
+    </p>
+    <p>Quantidade de digitos:
+        <input id="inputQtd" readonly>
+    </p>
+    <button id="btLimpar">Limpar</button>
 </body>
 </html>
