--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
 </head>
 <body>
     <h1>Exercícios <em>Progamação</em> Web</h1>
+    <div class="imagem">
+        <img src="html-css-javascript.jpg" alt="logo das linguagens">
+    </div>
     <div class="container">
-        <div class="imagem">
-            <img src="html-css-javascript.jpg" alt="logo das linguagens">
-        </div>
-        <div class="listas">
             <ul>
-                <a href="Ex01/index.html" target="_blank">
-                    <li>Media Query</li>
-                </a>
+                <div class="exercicio_01">
+                    <a href="Ex01/index.html" target="_blank">
+                        <li>Media Query</li>
+                    </a>
+                </div>
 
-                <a href="Ex02/" target="_blank">
-                    <li>Somatório</li>
-                </a>
+                <div class="exercicio_02">
+                    <a href="Ex02/" target="_blank">
+                        <li>Somatório</li>
+                    </a>
+                </div>
 
-                <a href="Ex03/" target="_blank">
-                    <li>Sorteador</li>
-                </a>
+                <div class="exercicio_03">
+                    <a href="Ex03/" target="_blank">
+                        <li>Sorteador</li>
+                    </a>
+                </div>
             </ul>
-        </div>
     </div>
 </body>
 </html>
