ajuste de ortografia

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Exercícios <em>Progamação</em> Web</h1>
+    <h1>Exercícios <em>Programação</em> Web</h1>
     <div class="imagem">
         <img src="html-css-javascript.jpg" alt="logo das linguagens">
     </div>
