--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
                 </div>
 
                 <div class="exercicio_02">
-                    <a href="Ex02/" target="_blank">
+                    <a href="Ex02/index.html" target="_blank">
                         <li>Somatório</li>
                     </a>
                 </div>
 
                 <div class="exercicio_03">
-                    <a href="Ex03/" target="_blank">
+                    <a href="Ex03/index.html" target="_blank">
                         <li>Sorteador</li>
+                    </a>
+                </div>
+
+                <div class="exercicio_04">
+                    <a href="Ex04/index.html" target="_blank">
+                        <li>Objeto Aluno</li>
                     </a>
                 </div>
             </ul>
