--- a/Ex04/index.html
+++ b/Ex04/index.html
@@ -8,18 +8,25 @@
 </head>
 <body>
     <h1>Exercício 04 - Obejeto Aluno</h1>
+    
     <p>Nome
         <input type="text" id="nomeAluno" placeholder="Digite seu nome">
     </p>
+
     <p>Matrícula:
         <input type="text" id="inputMatricula" placeholder="Digite sua Matrícula">
     </p>
+
     <p>Idade:
         <input type="text" id="inputIdade" placeholder="Digite sua Idade">
     </p>
+
     <p>CPF:
         <input type="text" id="inputCpf" placeholder="CPF">
     </p>
-    <button id="btnExibir">Exibir dados</button>
+    
+    <button id="btnJson">Exibir dados</button>
+
+    <pre id="jsonOutput"></pre>
 </body>
 </html>
