--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                         <li>Objeto Aluno</li>
                     </a>
                 </div>
+
+                <div class="exercicio_05">
+                    <a href="Ex05/index.html" target="_blank">
+                        <li>Array</li>
+                    </a>
+                </div>
             </ul>
     </div>
 </body>
