--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
                         <li>Array</li>
                     </a>
                 </div>
+
+                <div class="exercicio_06">
+                    <a href="Ex06/index.html" target="_blank">
+                        <li>Separador</li>
+                    </a>
+                </div>
+
+               <div class="exercicio_07">
+                    <a href="Ex07/index.html" target="_blank">
+                        <li>Fetch (Star Wars API)</li>
+                    </a>
+               </div>
             </ul>
     </div>
 </body>
