--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
                         <li>Fetch (Star Wars API)</li>
                     </a>
                </div>
+
+               <div class="exercicio_08">
+                    <a href="Ex08/index.html" target="_blank">
+                        <li>Fetch (APIS)</li>
+                    </a>
+
+               </div>
             </ul>
     </div>
 </body>
