sing up inicializado

--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
                     <a href="Ex08/index.html" target="_blank">
                         <li>Fetch (APIS)</li>
                     </a>
-
                </div>
+
+               <div class="exercicio_09">
+                    <a href="Ex09/singup.html" target="_blank">
+                        <li>Sing Up</li>
+                    </a>
+               </div>
+
             </ul>
     </div>
 </body>
