crud adicionado na lista de atv

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                     </a>
                </div>
 
+               <div class="exercicio_10">
+                    <a href="Ex10/index.html" target="_blank">
+                        <li>CRUD de despesas</li>
+                    </a>
+               </div>
+
             </ul>
     </div>
 </body>
