--- a/Ex11/index.html
+++ b/Ex11/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wesley Filho Dev</title>
+    <title>Jogo da senha</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>JOGO DA SENHA</h1>
+    <div class="container">
+        <p>Digite um número de 4 dígitos</p>
+        <input id="inputPalpite" type="text" placeholder="* * * *">
+        <button id="btnGo">IR</button>
+        <div id="resultadoDiv"></div>
+    </div>
 </body>
-</html>
+</html> 
