--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
                     </a>
                </div>
 
+               <div class="exercicio_11">
+                    <a href="Ex11/index.html" target="_blank">
+                        <li>Jogo da senha</li>
+                    </a>
+               </div>
+
+               <div class="exercicio_12">
+                   <a href="Ex12/index.html" target="_blank">
+                        <li>Formulario WhatsApp</li>
+                   </a>    
+                </div>
+
             </ul>
     </div>
 </body>
