--- a/Ex10/index.html
+++ b/Ex10/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Despesas</title>
+    <link rel="stylesheet" href="style.css">
     <script defer src="ex10.js"></script>
 </head>
 <body>
-    <h1>Controle suas despesas</h1>
-    <input id="inputDescription" type="text" placeholder="Descrição"> 
-    <input id="inputValue" type="number" placeholder="Valor">
-    <button id="btnAdd">Adicionar Despesa</button>
-    <h2>Despesas:</h2>
-    <ol id="olDespesas"></ol>
-    <h3>Total de Despesa: R$ <span id="totalDespesa">0.00</span></h3>
+    <div class="container">
+        <h1>CONTROLE SUAS DESPESAS</h1>
+        <input id="inputDescription" type="text" placeholder="Descrição"> 
+        <input id="inputValue" type="number" placeholder="Valor">
+        <button id="btnAdd">Adicionar</button>
+        <h2>Despesas:</h2>
+        <ol id="olDespesas"></ol>
+        <h3>Total de Despesa: R$ <span id="totalDespesa">0.00</span></h3>
+    </div>
 </body>
 </html>
